--- a/PiFrontEnd/src/app/MarketPlacee/buy-product/buy-product.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/buy-product/buy-product.component.html
@@ -46,7 +46,7 @@
                                       </div>
                               
                                   <div align="right">
-                                    <button type="submit"class="btn btn-primary"  [disabled]="!payEnabled">Place Order</button>
+                                    <button type="submit"class="btn btn-primary"  [disabled]="orderForm.invalid">Place Order</button>
                                     <div *ngIf="!payEnabled" style="color: rgb(255, 0, 187);">Vous devez d'abord effectuer le paiement.</div>
                                   </div>
                                 </div>
@@ -56,7 +56,7 @@
                     </div>
                     
                 </form>
-                <div class="container mt-5">
+            <!--   <div class="container mt-5">
                     <h2>Stripe Checkout</h2>
                     <div class="row mt-5">
                         <div class="col-md-4" style="text-align: center;">
@@ -66,7 +66,7 @@
                     <p class="mt-5">
                         Essayez avec le numéro de carte de test <b>4242 4242 4242 4242</b>, un numéro CVC aléatoire à trois chiffres, une date d'expiration future et un code postal américain aléatoire à cinq chiffres.
                     </p>
-                  </div>
+                  </div>-->
                   
 
             </div>
