--- a/PiFrontEnd/src/app/MarketPlacee/cart/cart.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/cart/cart.component.html
@@ -28,7 +28,10 @@
             <ng-container matColumnDef="Action">
               <th mat-header-cell *matHeaderCellDef> Action </th>
               <td mat-cell *matCellDef="let product">
-                <button mat-raised-button color="warn"  (click)="removeFromCart(product.idProduct)">Delete</button> </td>
+                <button mat-raised-button color="warn"  (click)="removeFromCart(product.idProduct)">Delete</button> 
+                
+                  <button mat-raised-button (click)="checkout1(product.idProduct)">Checkout</button>
+                </td>
             </ng-container>
   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
