--- a/PiFrontEnd/src/app/MarketPlacee/detaitlsback/detaitlsback.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/detaitlsback/detaitlsback.component.html
@@ -41,6 +41,8 @@
       <hr>
       <p class="h5">Call me : +216 {{product.numero}}</p>
 
+      <p class="h3" style="color: red;">Date de livraison {{product.deliveryDays}} jours</p>
+
       <hr>
       <div class="mt-5 text-center">                        
         &nbsp;
@@ -64,7 +66,9 @@
       <span class="star" (click)="setRating(5)" [class.filled]="rating >= 5">
         <i class="fa fa-star"></i>
       </span>
-  
+      <button type="button" class="btn btn-success" (click)="submitRating(product.idProduct)">
+        <i class="bi bi-star"></i> Rate  </button>
+      </div>
       <div class="form-floating">
         <textarea class="form-control" placeholder="Leave a comment here" id="comment" name="comment" [(ngModel)]="comment" required minlength="2" maxlength="50" #commentField="ngModel"></textarea>
         <div *ngIf="commentField.invalid && (commentField.dirty || commentField.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
@@ -73,15 +77,11 @@
         </div>
                 <label for="floatingTextarea">Comments</label>
       </div>
-    </div>
-    <button type="button" class="btn btn-success" 
-    (click)="saveProductRating(product.idProduct, rating, comment)"
-    [disabled]="commentField.invalid  || !ratingSelected ">
+    
+    <button type="button" class="btn btn-success" (click)="submitComment(product.idProduct)">
 <i class="bi bi-chat-dots"></i> Comment
 </button>
-<div *ngIf="!ratingSelected && !commentField.invalid" class="alert alert-danger" role="info">
-  Veuillez sélectionner une étoile avant de commenter.
-</div>
+
 
     
  
