--- a/PiFrontEnd/src/app/MarketPlacee/register-product/register-product.component.html
+++ b/PiFrontEnd/src/app/MarketPlacee/register-product/register-product.component.html
@@ -164,6 +164,15 @@
                                                   <div *ngIf="price.errors && price.errors['max']">Price cannot exceed 10,000 dt</div>
                                                 </div>
                                               </div>
+                                              <div class="form-outline mb-4">
+                                                <label class="form-label" for="form3Example1n">deliveryDays</label>
+                                                <input class="form-control" type="number" id="form3Example1n" name="deliveryDays"  [(ngModel)]="product.deliveryDays"required min="0" max="5" #deliveryDays="ngModel">
+                                                <div *ngIf="deliveryDays.invalid && (deliveryDays.dirty || deliveryDays.touched)" style="color: #dc3545; font-size: 0.875rem; margin-top: 0.25rem;">
+                                                  <div *ngIf="deliveryDays.errors && deliveryDays.errors['required']">deliveryDays is required.</div>
+                                                  <div *ngIf="deliveryDays.errors && deliveryDays.errors['min']">deliveryDays cannot be negative.</div>
+                                                  <div *ngIf="deliveryDays.errors && deliveryDays.errors['max']">deliveryDays cannot exceed 5 days</div>
+                                                </div>
+                                              </div>
                                     <div class="row">
                                     <div class="form-outline mb-4">
                                         <label class="mb-3" for="form3Example86">Images</label>
