--- a/PiFrontEnd/src/app/FrontOffice/navbar-front/navbar-front.component.html
+++ b/PiFrontEnd/src/app/FrontOffice/navbar-front/navbar-front.component.html
@@ -39,7 +39,7 @@
                                     <ul class="sub-menu collapse" id="submenu-1-3">
                                         <li class="nav-item"><a routerLink="/back">Ad Grid</a></li>
                                         <li class="nav-item"><a routerLink="/list">Ad Listing</a></li>
-                                        <li class="nav-item"><a routerLink="/map">Ad Details</a></li>
+                                        <li class="nav-item"><a routerLink="/listevents">event</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
